# vaani-2.0

./: .gitignore  Cargo.toml
src/: embedder.rs  main.rs  server.rs  train.rs
