[package]
name = "vaani-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.0", features = ["wgpu", "fusion"] }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
polars = { version = "0.46.0", features = ["lazy"] }
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
